Implemented inferred spans otel plugin